<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".UserLogin.SignUpFragment">

    <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:gravity="center"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/signup_username"
            app:layout_constraintEnd_toEndOf="@+id/signup_username" android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/signup_username"
            android:layout_marginStart="16dp"/>

    <EditText
            android:inputType="textPassword"
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/signup_email"
            app:layout_constraintEnd_toEndOf="@+id/signup_email" android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/signup_email"
            android:layout_marginStart="16dp"/>

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="75dp"
            android:background="@drawable/login_button_bg"
            app:rippleColor="@color/color_secondary"
            android:textColor="@color/color_background"
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/signup_password"
            app:layout_constraintStart_toStartOf="@+id/signup_password"
            app:layout_constraintEnd_toEndOf="@+id/signup_password" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>
    <CheckBox
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup_remember_me"
            app:layout_constraintTop_toBottomOf="@+id/signup_button"
            app:layout_constraintStart_toStartOf="@+id/signup_button"
            android:layout_marginTop="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>