<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".UserLogin.SignInFragment">

    <EditText
            android:id="@+id/signin_email"
            android:textColor="@color/color_primary_variant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
        />

    <EditText
            android:inputType="textPassword"
            android:textColor="@color/color_primary_variant"
            android:id="@+id/signin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/signin_email"/>

    <com.google.android.material.button.MaterialButton
            app:cornerRadius="75dp"
            android:background="@drawable/login_button_bg"
            app:rippleColor="@color/color_secondary"
            android:textColor="@color/color_background"
            android:id="@+id/signin_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signin_button"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/signin_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>

    <CheckBox
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/signin_remember_me"
            app:layout_constraintTop_toBottomOf="@+id/signin_button"
            app:layout_constraintStart_toStartOf="@+id/signin_button"
            android:layout_marginTop="32dp" android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="Roboto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signin_forgot_password"
            app:layout_constraintTop_toBottomOf="@+id/signin_remember_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    <!--<com.google.android.gms.common.SignInButton-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/signin_forgot_password"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--android:layout_marginStart="16dp"-->
            <!--android:layout_marginEnd="16dp"-->
            <!--android:id="@+id/signin_google_button"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginTop="16dp"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>
