<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
            app:title="@string/app_name"
            app:titleTextColor="@color/color_primary"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dashboard_toolbar"
    >

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.tabs.TabLayout
            app:tabTextColor="@color/color_primary"
            android:id="@+id/dashboard_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.tabs.TabItem
                android:background="@color/NavajoWhite"
                android:text="@string/Chats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabItem
                android:background="@color/AntiqueWhite"
                android:text="@string/Uploads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabItem
                android:background="@color/FloralWhite"
                android:text="@string/Profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/dashboard_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dashboard_tablayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
    >

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/dashboard_newChat"
            android:src="@drawable/ic_chat"
            app:rippleColor="@color/color_secondary"
            android:backgroundTint="@color/color_primary"
            android:layout_width="50dp"
            android:layout_height="50dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>