<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_top"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UserLogin.LogInActivity">

    <com.google.android.material.appbar.MaterialToolbar
            android:background="@color/color_primary"
            app:title="@string/app_name"
            app:titleTextColor="@color/color_on_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/materialToolbar"
    >

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.tabs.TabLayout
            app:tabGravity="fill"
            app:tabSelectedTextColor="@color/color_secondary"
            app:tabTextColor="@color/color_background"
            android:background="@color/color_primary"
            android:id="@+id/login_tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar">

        <com.google.android.material.tabs.TabItem
                android:text="@string/signin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabItem
                android:text="@string/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/login_viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_tablayout">

    </androidx.viewpager.widget.ViewPager>


</androidx.constraintlayout.widget.ConstraintLayout>